--- a/_layouts/list-detail.html
+++ b/_layouts/list-detail.html
@@ -7,10 +7,7 @@
        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" /> 
    </head>
    <body>
-   <h1>Flexbox栅格系统1canvas</h1>
-<p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
-<p>原文链接：</p><a href="https://zhuanlan.zhihu.com/p/21887541">https://zhuanlan.zhihu.com/p/21887541</a>
-<a onclick="history.go(-1)" href="javascript:;">Go back</a>
+   {{content }}
    </body>
  
    
