终于好好写了个文章了·····虽然还没有写完····

--- a/_layouts/css-default.html
+++ b/_layouts/css-default.html
@@ -3,7 +3,7 @@
    <head>
        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
        <title>css</title>
-       <link rel="icon" href="assetsimg/favicon.ico" type="image/x-icon" />
+       <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
        <link rel="stylesheet" type="text/css" href="assets/css/list.css">
    </head>
