--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
-   <head>
-       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-       <title>My blog</title>
-       <link rel="icon" href="assetsimg/favicon.ico" type="image/x-icon" />
-       <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
-       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-   </head>
-   <body>
-   {{content }}
-   </body>
-   <script type="text/javascript" src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
-   <script type="text/javascript" src="assets/js/index.js"></script>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>My blog</title>
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    {{content }}
+</body>
+<script type="text/javascript" src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="assets/js/index.js"></script>
 <html>
