--- a/_layouts/list-detail.html
+++ b/_layouts/list-detail.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
+    <ul class="page-tools">
+        <li>
+            <a class="fa fa-reply" onclick="history.go(-1)" href="javascript:;"></a>
+        </li>
+    </ul>
+
     {{content }}
-    <div class='footTools'>
+    <div class='footTools' id="footTools">
         <ul>
             <li>
-                <a class="fa fa-reply" onclick="history.go(-1)" href="javascript:;"></a>
-            </li>
-            <li>
-                <a class="fa fa-chevron-up" href="javascript:;"></a>
+                <a class=" fa fa-chevron-up " href="javascript:; "></a>
             </li>
         </ul>
     </div>
 </body>
 
-<script src="https://apps.bdimg.com/libs/highlight.js/9.1.0/highlight.min.js"></script>
-<script>
-    hljs.initHighlightingOnLoad();
-</script>
+<script src="https://apps.bdimg.com/libs/highlight.js/9.1.0/highlight.min.js "></script>
+<script src="../../../assets/js/list-detail.js "></script>
 
 
 <html>
