添加路由功能

--- a/_layouts/canvas-default.html
+++ b/_layouts/canvas-default.html
@@ -1,15 +1,3 @@
-﻿<!DOCTYPE html>
-<html>
-   <head>
-       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-       <title>canvas</title>
-       <link rel="icon" href="assetsimg/favicon.ico" type="image/x-icon" />
-       <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
-       <link rel="stylesheet" type="text/css" href="assets/css/list.css">
-   </head>
-   <body>
+﻿
+            <h2 class="list-big-title">canvas相关</h2>
    {{content }}
-   </body>
-   <script type="text/javascript" src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
-   <script type="text/javascript" src="assets/js/list.js"></script>
-<html>
